Fixed Navbar spacing, Allowed for more than two genres to display for search

--- a/client/src/Navbar.css
+++ b/client/src/Navbar.css
@@ -9,10 +9,23 @@
 }
 
 .nav-logo {
-  height: 53px;
-  width: 53px;
-  margin-right: -28em; 
+  height: 3.3rem;
+  width: 3.3rem;
+  margin-right: 1rem; /* space between logo and home icon */
 }
+
+.nav-left {
+  display: flex;
+  align-items: center;
+}
+
+.home-icon {
+  font-size: 1.8rem;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 1;
+}
+
 
 .nav-links {
   list-style: none;
